--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "@heroicons/react": "^2.0.18",
     "axios": "^1.2.2",
     "ethers": "^5.7.2",
+    "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.17.0",
+    "ui": "github:shadcn/ui"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -28,7 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^4.4.5"
   }
 }
